# gcp_ai_playground

./: .gitignore  README.md
usecases/conversation-coach/artifacts/cli/: .gitignore  README.md  ci_log.txt  pyproject.toml  run_coach_with_logging.sh
usecases/conversation-coach/artifacts/cli/cc_coach/: __init__.py  cli.py  config.py  pipeline.py
usecases/conversation-coach/artifacts/cli/cc_coach/_backup/: coaching.py.bak  conversation_coach.py.bak
usecases/conversation-coach/artifacts/cli/cc_coach/agents/: __init__.py  conversation_coach.py  summary_coach.py
usecases/conversation-coach/artifacts/cli/cc_coach/models/: __init__.py  conversation.py  phrase_match.py  registry.py
usecases/conversation-coach/artifacts/cli/cc_coach/monitoring/: __init__.py  cost.py  dashboard.py  logging.py  metrics.py  tracing.py
usecases/conversation-coach/artifacts/cli/cc_coach/prompts/: __init__.py  coach_system_prompt.py
usecases/conversation-coach/artifacts/cli/cc_coach/rag/: __init__.py  config.py  ingest.py  metadata.py  parser.py  retriever.py  topic_extractor.py
usecases/conversation-coach/artifacts/cli/cc_coach/schemas/: __init__.py  ci_enrichment.json  coach_analysis.json  coaching_input.py  coaching_output.py  conversation_registry.json  daily_agent_summary.json  summary.py  weekly_agent_report.json
usecases/conversation-coach/artifacts/cli/cc_coach/services/: __init__.py  aggregation.py  bigquery.py  coaching.py  gcs.py  insights.py  phrase_matcher.py  summary.py
usecases/conversation-coach/artifacts/cli/cc_coach/utils/: __init__.py  logging.py
usecases/conversation-coach/artifacts/cli/documents/howto/: schema_migration.md
usecases/conversation-coach/artifacts/cli/log_files/: .gitkeep
usecases/conversation-coach/artifacts/cli/scripts/: batch_analyze.py  dump_components.py
usecases/conversation-coach/artifacts/cli/sql/: create_kb_tables.sql
usecases/conversation-coach/artifacts/cli/terraform/: logging.tf  main.tf  monitoring.tf  tfplan  variables.tf
usecases/conversation-coach/artifacts/cli/tests/: __init__.py  conftest.py  test_bigquery.py  test_insights.py  test_models.py  test_rag.py
usecases/conversation-coach/artifacts/cli/verification/: VERIFICATION_REPORT.md  batch_analysis_summary.txt  bq_daily_summary.txt  bq_weekly_summary.txt  coaching_2b6f5c61.json  coaching_3f2d9e4b.json  coaching_6a4a8f17.json  coaching_9c8f3c2a.json  coaching_a1b2c3d4.json  coaching_a7c3d1e8.json  coaching_b8d4e2f9.json  coaching_c9e5f3a0.json  coaching_e5f6g7h8.json  daily_summary_run.txt  instruction_2b6f5c61.txt  instruction_3f2d9e4b.txt  instruction_6a4a8f17.txt  instruction_9c8f3c2a.txt  instruction_a1b2c3d4.txt  instruction_a7c3d1e8.txt  instruction_b8d4e2f9.txt  instruction_c9e5f3a0.txt  instruction_e5f6g7h8.txt  logs_today.txt  monitor_summary.txt  source_data.txt  weekly_summary_run.txt
usecases/conversation-coach/artifacts/cli/verification/per_component/: 01_ci_enrichment_raw.json  01b_ci_summary.json  02_phrase_matches.json  03_registry_data.json  04_parsed_transcript.json  04b_raw_transcript.txt  05_coaching_input.json  06_rag_retrieval.json  07a_embedded_policy_fallback.txt  07b_system_prompt.txt  08_coaching_output.json  (+2 more)
(+109 files in other folders)
